[package]
name = "falling-sand"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = true

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
egui = "0.34.2"
egui-wgpu = "0.34.2"
egui-winit = "0.34.2"
glam = "0.32.1"
pollster = "0.4.0"
rand = "0.10.1"
wgpu = "29.0.3"
winit = "0.30.13"
